Update TikTok and Reels section headings

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ footer{font-size:13px;color:#aaa;margin-top:30px}
 </div>
 
 <div class="card">
-<h3>🚀 TikTok Keşfeti Açır</h3>
+<h3>🚀 TikTok Keşfeti Açır ömurluy qalıcı </h3>
 <p>👁️ 1.500 İzlənmə</p>
 <p>♥️ 1.000 Bəyənmə</p>
 <p>💾 100 Kaydet • 🔁 50 Paylaşım • 💬 10 Yorum</p>
@@ -117,7 +117,7 @@ footer{font-size:13px;color:#aaa;margin-top:30px}
 </div>
 
 <div class="card">
-<h3>👁️ 100.000 Reels İzlənmə</h3>
+<h3>👁️ 100.000 Reels İzlənmə ömurluy Qalıcı </h3>
 <p>♥️ 1.000 Bəyənmə</p>
 <p><b>💰 3 AZN</b></p>
 <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20100000%20izlenme%201000%20beyenme">WhatsApp-dan sifariş et</a>
