Fix HTML formatting and update footer year

--- a/index.html
+++ b/index.html
@@ -79,64 +79,85 @@ footer{font-size:13px;color:#aaa;margin-top:30px}
 
 <!-- TIKTOK -->
 <div class="card"><h3>🎵 TikTok Paketləri</h3></div>
+
 <div class="card">
-    <h3>👤 1.000 Takipçi</h3>
-    <p>✅ Real Qarantili
-    <p><b>💰 5 AZN</b></p>
-    <a class="order-btn" href="https://wa.me/994516159103?text=Salam%20BrendPanel.az%20-%201000%20TikTok%20Takipci%20sifaris%20etmek%20isteyirem">
-      WhatsApp-dan sifariş et
-    </a>
-  </div>
-<div class="card">
-<span class="badge">🔥 Ən Çox Satılan</span>
-<h3>Real Qarantili Paket</h3>
-<p>👁️ 1.000 İzlənmə</p>
-<p>♥️ 1.000 Bəyənmə</p>
-<p>🔒 Ömürlük Qalıcı</p>
-<p><b>💰 3 AZN</b></p>
-<a class="order-btn" href="https://wa.me/994516159103?text=TikTok%201000%20izlenme%201000%20beyenme%20real%20paket">WhatsApp-dan sifariş et</a>
+  <h3>👤 1.000 Takipçi</h3>
+  <p>✅ Real Qarantili</p>
+  <p><b>💰 5 AZN</b></p>
+  <a class="order-btn" href="https://wa.me/994516159103?text=Salam%20BrendPanel.az%20-%201000%20TikTok%20Takipci%20sifaris%20etmek%20isteyirem">
+    WhatsApp-dan sifariş et
+  </a>
 </div>
 
 <div class="card">
-<h3>👁️ 10.000 İzlənmə + ♥️ 10.000 Bəyənmə</h3>
-<p>🤖 Bot Qarantili</p>
-<p><b>💰 3 AZN</b></p>
-<a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%2010000%20beyenme%20bot">WhatsApp-dan sifariş et</a>
+  <span class="badge">🔥 Ən Çox Satılan</span>
+  <h3>Real Qarantili Paket</h3>
+  <p>👁️ 1.000 İzlənmə</p>
+  <p>♥️ 1.000 Bəyənmə</p>
+  <p>🔒 Ömürlük Qalıcı</p>
+  <p><b>💰 3 AZN</b></p>
+  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%201000%20izlenme%201000%20beyenme%20real%20paket">
+    WhatsApp-dan sifariş et
+  </a>
 </div>
 
 <div class="card">
-<h3>🚀 TikTok Keşfeti Açır ömurluy qalıcı </h3>
-<p>👁️ 1.500 İzlənmə</p>
-<p>♥️ 1.000 Bəyənmə</p>
-<p>💾 100 Kaydet • 🔁 50 Paylaşım • 💬 10 Yorum</p>
-<p><b>💰 3 AZN</b></p>
-<a class="order-btn" href="https://wa.me/994516159103?text=TikTok%20kesfet%20paketi%201500%20izlenme">WhatsApp-dan sifariş et</a>
+  <h3>👁️ 10.000 İzlənmə + ♥️ 10.000 Bəyənmə</h3>
+  <p>🤖 Bot Qarantili</p>
+  <p><b>💰 3 AZN</b></p>
+  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%2010000%20beyenme%20bot">
+    WhatsApp-dan sifariş et
+  </a>
+</div>
+
+<!-- 🔹 YENİ ƏLAVƏ EDİLƏN PAKET -->
+<div class="card">
+  <h3>👁️ 10.000 İzlənmə + ♥️ 5.000 Bəyənmə</h3>
+  <p>🤖 Bot Qarantili</p>
+  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%205000%20beyenme%20bot%20paket">
+    WhatsApp-dan sifariş et
+  </a>
+</div>
+
+<div class="card">
+  <h3>🚀 TikTok Keşfeti Açır ömürlük qalıcı</h3>
+  <p>👁️ 1.500 İzlənmə</p>
+  <p>♥️ 1.000 Bəyənmə</p>
+  <p>💾 100 Kaydet • 🔁 50 Paylaşım • 💬 10 Yorum</p>
+  <p><b>💰 3 AZN</b></p>
+  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%20kesfet%20paketi%201500%20izlenme">
+    WhatsApp-dan sifariş et
+  </a>
 </div>
 
 <!-- INSTAGRAM -->
 <div class="card"><h3>📸 Instagram Paketləri</h3></div>
 
 <div class="card">
-<h3>👤 1.000 Instagram Takipçi</h3>
-<p>✅ Real Qarantili</p>
-<p><b>💰 5 AZN</b></p>
-<a class="order-btn" href="https://wa.me/994516159103?text=Instagram%201000%20real%20takipci">WhatsApp-dan sifariş et</a>
+  <h3>👤 1.000 Instagram Takipçi</h3>
+  <p>✅ Real Qarantili</p>
+  <p><b>💰 5 AZN</b></p>
+  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%201000%20real%20takipci">
+    WhatsApp-dan sifariş et
+  </a>
 </div>
 
 <div class="card">
-<h3>👁️ 100.000 Reels İzlənmə ömurluy Qalıcı </h3>
-<p>♥️ 1.000 Bəyənmə</p>
-<p><b>💰 3 AZN</b></p>
-<a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20100000%20izlenme%201000%20beyenme">WhatsApp-dan sifariş et</a>
+  <h3>👁️ 100.000 Reels İzlənmə ömürlük qalıcı</h3>
+  <p>♥️ 1.000 Bəyənmə</p>
+  <p><b>💰 3 AZN</b></p>
+  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20100000%20izlenme%201000%20beyenme">
+    WhatsApp-dan sifariş et
+  </a>
 </div>
 
 <div class="whatsapp">
-<a href="https://wa.me/994516159103">
-<img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
-</a>
+  <a href="https://wa.me/994516159103">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
+  </a>
 </div>
 
-<footer>© 2025-2026 BrendPanel.az</footer>
+<footer>© 2025–2026 BrendPanel.az</footer>
 
 </div>
 </body>
