--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ footer{font-size:13px;color:#aaa;margin-top:30px}
 
 <!-- 🔹 YENİ ƏLAVƏ EDİLƏN PAKET -->
 <div class="card">
-  <h3>👁️ 10.000 İzlənmə + ♥️ 5.000 Bəyənmə</h3>
+  <h3>👁️ 10.000 İzlənmə + ♥️ 5.000 Bəyənmə 2 AZN </h3>
   <p>🤖 Bot Qarantili</p>
   <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%205000%20beyenme%20bot%20paket">
     WhatsApp-dan sifariş et
