Refactor HTML structure and improve styling

--- a/index.html
+++ b/index.html
@@ -71,17 +71,14 @@ body.light{
   background:#f4f4f4;
   color:#000;
 }
-
 body.light .card{
   background:#fff;
   border:1px solid #ccc;
   box-shadow:0 0 10px rgba(0,0,0,.1);
 }
-
 body.light .card p{
   color:#000;
 }
-
 body.light footer{
   color:#444;
 }
@@ -89,7 +86,17 @@ body.light footer{
   font-style:italic;
   color:#fff;
 }
-  
+#allReviews p{
+  background:rgba(255,215,0,0.1);
+  padding:6px 8px;
+  border-radius:6px;
+  margin:4px 0;
+}
+input, textarea, select{
+  border-radius:6px;
+  padding:6px;
+  margin:6px 0;
+}
 </style>
 </head>
 
@@ -99,14 +106,8 @@ body.light footer{
 <div class="logo">👑</div>
 <div class="title">BrendPanel.az</div>
 <div class="subtitle">🇦🇿 Ucuz • Güvənli • Sürətli SMM Panel</div>
-<button id="themeToggle" style="
-margin-top:10px;
-padding:8px 16px;
-border:none;
-border-radius:20px;
-cursor:pointer;
-font-weight:bold;
-">
+
+<button id="themeToggle" style="margin-top:10px;padding:8px 16px;border:none;border-radius:20px;cursor:pointer;font-weight:bold;">
 🌙 Dark Mode
 </button>
 
@@ -119,16 +120,12 @@ font-weight:bold;
 
 <!-- TIKTOK -->
 <div class="card"><h3>🎵 TikTok Paketləri</h3></div>
-
 <div class="card">
   <h3>👤 1.000 Takipçi</h3>
   <p>✅ Real Qarantili</p>
   <p><b>💰 5 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=1000%20TikTok%20Takipci">
-    WhatsApp-dan sifariş et
-  </a>
+  <a class="order-btn" href="https://wa.me/994516159103?text=1000%20TikTok%20Takipci">WhatsApp-dan sifariş et</a>
 </div>
-
 <div class="card">
   <span class="badge">🔥 Ən Çox Satılan</span>
   <h3>Real Qarantili Paket</h3>
@@ -136,53 +133,37 @@ font-weight:bold;
   <p>♥️ 1.000 Bəyənmə</p>
   <p>🔒 Ömürlük Qalıcı</p>
   <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%201000%20izlenme%201000%20beyenme">
-    WhatsApp-dan sifariş et
-  </a>
+  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%201000%20izlenme%201000%20beyenme">WhatsApp-dan sifariş et</a>
 </div>
-
 <div class="card">
   <h3>👁️ 10.000 İzlənmə + ♥️ 10.000 Bəyənmə</h3>
   <p>🤖 Bot Qarantili</p>
   <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%2010000%20beyenme">
-    WhatsApp-dan sifariş et
-  </a>
+  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%2010000%20beyenme">WhatsApp-dan sifariş et</a>
 </div>
-
 <div class="card">
   <h3>👁️ 10.000 İzlənmə + ♥️ 5.000 Bəyənmə</h3>
   <p>🤖 Bot Qarantili</p>
   <p><b>💰 2 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%205000%20beyenme">
-    WhatsApp-dan sifariş et
-  </a>
+  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%205000%20beyenme">WhatsApp-dan sifariş et</a>
 </div>
-
 <div class="card">
   <h3>🚀 TikTok Keşfeti Açır ömürlük qalıcı</h3>
   <p>👁️ 1.500 İzlənmə</p>
   <p>♥️ 1.000 Bəyənmə</p>
   <p>💾 100 Kaydet • 🔁 50 Paylaşım • 💬 10 Yorum</p>
   <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%20kesfet%20paketi">
-    WhatsApp-dan sifariş et
-  </a>
+  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%20kesfet%20paketi">WhatsApp-dan sifariş et</a>
 </div>
 
 <!-- INSTAGRAM -->
 <div class="card"><h3>📸 Instagram Paketləri</h3></div>
-
 <div class="card">
   <h3>👤 1.000 Instagram Takipçi</h3>
   <p>✅ Real Qarantili</p>
   <p><b>💰 5 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%201000%20real%20takipci">
-    WhatsApp-dan sifariş et
-  </a>
+  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%201000%20real%20takipci">WhatsApp-dan sifariş et</a>
 </div>
-
-<!-- ✅ YENİ INSTAGRAM PAKETİ -->
 <div class="card">
   <span class="badge">🔥 Yeni</span>
   <h3>🇦🇿 Instagram Real Azərbaycan Bəyənmə</h3>
@@ -190,18 +171,13 @@ font-weight:bold;
   <p>👁️ 500 İzlənmə</p>
   <p>🚀 Keşfeti Açır</p>
   <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20500%20real%20azerbaycan%20beyenme%20500%20izlenme">
-    WhatsApp-dan sifariş et
-  </a>
+  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20500%20real%20azerbaycan%20beyenme%20500%20izlenme">WhatsApp-dan sifariş et</a>
 </div>
-
 <div class="card">
   <h3>👁️ 100.000 Reels İzlənmə ömürlük qalıcı</h3>
   <p>♥️ 1.000 Bəyənmə</p>
   <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20100000%20izlenme">
-    WhatsApp-dan sifariş et
-  </a>
+  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20100000%20izlenme">WhatsApp-dan sifariş et</a>
 </div>
 
 <div class="whatsapp">
@@ -209,7 +185,8 @@ font-weight:bold;
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
   </a>
 </div>
-<!-- ⭐ MÜŞTƏRİ RƏYLƏRİ -->
+
+<!-- ⭐ MÜŞTƏRİ RƏYLƏRİ SLİDER -->
 <div class="card">
   <h3>⭐ Müştəri Rəyləri</h3>
   <p id="reviewText">Çox sürətli və keyfiyyətli xidmət 👍</p>
@@ -217,7 +194,27 @@ font-weight:bold;
   <p>⭐⭐⭐⭐⭐</p>
 </div>
 
+<!-- ⭐ MÜŞTƏRİ RƏY FORMU -->
+<div class="card">
+  <h3>✍️ Rəy Yazın</h3>
+  <input type="text" id="reviewerName" placeholder="Adınız" style="width:80%;">
+  <textarea id="reviewTextInput" placeholder="Rəyinizi yazın" style="width:80%;"></textarea>
+  <div>Ulduz:
+    <select id="reviewStars">
+      <option value="">Seçin</option>
+      <option value="⭐">⭐</option>
+      <option value="⭐⭐">⭐⭐</option>
+      <option value="⭐⭐⭐">⭐⭐⭐</option>
+      <option value="⭐⭐⭐⭐">⭐⭐⭐⭐</option>
+      <option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option>
+    </select>
+  </div>
+  <button id="submitReview" style="padding:6px 12px;margin-top:6px;background:#25D366;color:#000;font-weight:bold;border-radius:6px;border:none;cursor:pointer;">Göndər</button>
+  <div id="allReviews" style="margin-top:12px;text-align:left;"></div>
+</div>
+
 <footer>© 2025-2026 BrendPanel.az</footer>
+
 <!-- 🔴 CANLI SİFARİŞ BİLDİRİŞİ -->
 <div id="liveOrder" style="
 position:fixed;
@@ -231,75 +228,79 @@ box-shadow:0 0 20px rgba(0,0,0,.6);
 font-size:13px;
 display:none;
 z-index:9999;
-">
-</div>
+"></div>
 
 <script>
-const orders = [
-  "📦 TikTok — 10.000 İzlənmə alındı",
-  "📦 Instagram — 1.000 Real Takipçi alındı",
-  "📦 TikTok — 1.000 Bəyənmə alındı",
-  "📦 Instagram — Reels 100.000 İzlənmə",
-  "📦 TikTok — Keşfet Paketi alındı"
-];
-
-function showLiveOrder() {
-  const box = document.getElementById("liveOrder");
-  const randomOrder = orders[Math.floor(Math.random() * orders.length)];
-  const minutes = Math.floor(Math.random() * 5) + 1;
-
-  box.innerHTML = `<b>${minutes} dəqiqə əvvəl</b><br>${randomOrder}`;
-  box.style.display = "block";
-
-  setTimeout(() => {
-    box.style.display = "none";
-  }, 5000);
-}
-
-setInterval(showLiveOrder, 12000);
-</script>
-
-</div>
-<script>
+// Dark / Light Mode
 const toggleBtn = document.getElementById("themeToggle");
-
 function applyTheme(theme){
-  if(theme === "light"){
-    document.body.classList.add("light");
-    toggleBtn.innerText = "☀️ Light Mode";
-  }else{
-    document.body.classList.remove("light");
-    toggleBtn.innerText = "🌙 Dark Mode";
-  }
+  if(theme==="light"){document.body.classList.add("light");toggleBtn.innerText="☀️ Light Mode";}
+  else{document.body.classList.remove("light");toggleBtn.innerText="🌙 Dark Mode";}
 }
-
-toggleBtn.addEventListener("click", () => {
-  const current = localStorage.getItem("theme") || "dark";
-  const next = current === "dark" ? "light" : "dark";
-  localStorage.setItem("theme", next);
+toggleBtn.addEventListener("click",()=>{
+  const current=localStorage.getItem("theme")||"dark";
+  const next=current==="dark"?"light":"dark";
+  localStorage.setItem("theme",next);
   applyTheme(next);
 });
-
-document.addEventListener("DOMContentLoaded", () => {
-  const savedTheme = localStorage.getItem("theme") || "dark";
+document.addEventListener("DOMContentLoaded",()=>{
+  const savedTheme=localStorage.getItem("theme")||"dark";
   applyTheme(savedTheme);
 });
-</script>
- <script>
-const reviews = [
+
+// Müştəri Rəy Slidəri
+const reviews=[
   {text:"Çox sürətli və güvənli paneldir 👍", name:"— Elvin R."},
   {text:"Qiymətlər çox münasibdir 🔥", name:"— Nihad M."},
   {text:"Reels izlenmeleri problemsiz gəldi 👌", name:"— Aysel Q."},
   {text:"WhatsApp dəstək superdir 💯", name:"— Murad H."}
 ];
-
-let i = 0;
+let i=0;
 setInterval(()=>{
-  i = (i + 1) % reviews.length;
-  document.getElementById("reviewText").innerText = reviews[i].text;
-  document.getElementById("reviewName").innerText = reviews[i].name;
+  i=(i+1)%reviews.length;
+  document.getElementById("reviewText").innerText=reviews[i].text;
+  document.getElementById("reviewName").innerText=reviews[i].name;
 },4000);
+
+// Canlı sifariş
+const orders=["📦 TikTok — 10.000 İzlənmə alındı","📦 Instagram — 1.000 Real Takipçi alındı","📦 TikTok — 1.000 Bəyənmə alındı","📦 Instagram — Reels 100.000 İzlənmə","📦 TikTok — Keşfet Paketi alındı"];
+function showLiveOrder(){
+  const box=document.getElementById("liveOrder");
+  const randomOrder=orders[Math.floor(Math.random()*orders.length)];
+  const minutes=Math.floor(Math.random()*5)+1;
+  box.innerHTML=`<b>${minutes} dəqiqə əvvəl</b><br>${randomOrder}`;
+  box.style.display="block";
+  setTimeout(()=>{box.style.display="none";},5000);
+}
+setInterval(showLiveOrder,12000);
+
+// Rəy Formu
+const submitBtn=document.getElementById("submitReview");
+const allReviews=document.getElementById("allReviews");
+let reviewsList=JSON.parse(localStorage.getItem("reviewsList"))||[];
+reviewsList.forEach(r=>{
+  const p=document.createElement("p");
+  p.innerHTML=`<b>${r.name}</b> ${r.stars}<br>${r.text}`;
+  allReviews.appendChild(p);
+});
+submitBtn.addEventListener("click",()=>{
+  const name=document.getElementById("reviewerName").value.trim();
+  const text=document.getElementById("reviewTextInput").value.trim();
+  const stars=document.getElementById("reviewStars").value;
+  if(!name){alert("Adınızı yazmalısınız!");return;}
+  if(!text){alert("Rəy yazmalısınız!");return;}
+  if(!stars){alert("Ulduz seçməlisiniz!");return;}
+  const review={name,text,stars};
+  reviewsList.push(review);
+  localStorage.setItem("reviewsList",JSON.stringify(reviewsList));
+  const p=document.createElement("p");
+  p.innerHTML=`<b>${name}</b> ${stars}<br>${text}`;
+  allReviews.appendChild(p);
+  document.getElementById("reviewerName").value="";
+  document.getElementById("reviewTextInput").value="";
+  document.getElementById("reviewStars").value="";
+});
 </script>
- 
+
 </body>
 </html>
