Add new reviews to the index.html file

--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@ const reviews=[
   {text:"Qiymətlər çox münasibdir 🔥", name:"— Nihad M."},
   {text:"Reels izlenmeleri problemsiz gəldi 👌", name:"— Aysel Q."},
   {text:"WhatsApp dəstək superdir 💯", name:"— Murad H."}
+  {text:"WhatsApp dəstək superdir 💯", name:"— nazim m."}
+  {text:"N1 panel Bunlardı 🔥", name:"— asim s."},
+  {text:"Çooooox ucuzdur qiymetler 👍", name:"— gunel R."},  
 ];
 let i=0;
 setInterval(()=>{
