--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="az">
 <head>
 <meta charset="UTF-8">
@@ -120,68 +120,7 @@ input, textarea, select{
   <p>🔒 100% Güvənli Xidmət</p>
 </div>
 
-<!-- TIKTOK -->
-<div class="card"><h3>🎵 TikTok Paketləri</h3></div>
-<div class="card">
-  <h3>👤 1.000 Takipçi</h3>
-  <p>✅ Real Qarantili</p>
-  <p><b>💰 5 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=1000%20TikTok%20Takipci">WhatsApp-dan sifariş et</a>
-</div>
-<div class="card">
-  <span class="badge">🔥 Ən Çox Satılan</span>
-  <h3>Real Qarantili Paket</h3>
-  <p>👁️ 1.000 İzlənmə</p>
-  <p>♥️ 1.000 Bəyənmə</p>
-  <p>🔒 Ömürlük Qalıcı</p>
-  <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%201000%20izlenme%201000%20beyenme">WhatsApp-dan sifariş et</a>
-</div>
-<div class="card">
-  <h3>👁️ 10.000 İzlənmə + ♥️ 10.000 Bəyənmə</h3>
-  <p>🤖 Bot Qarantili</p>
-  <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%2010000%20beyenme">WhatsApp-dan sifariş et</a>
-</div>
-<div class="card">
-  <h3>👁️ 10.000 İzlənmə + ♥️ 5.000 Bəyənmə</h3>
-  <p>🤖 Bot Qarantili</p>
-  <p><b>💰 2 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%2010000%20izlenme%205000%20beyenme">WhatsApp-dan sifariş et</a>
-</div>
-<div class="card">
-  <h3>🚀 TikTok Keşfeti Açır ömürlük qalıcı</h3>
-  <p>👁️ 1.500 İzlənmə</p>
-  <p>♥️ 1.000 Bəyənmə</p>
-  <p>💾 100 Kaydet • 🔁 50 Paylaşım • 💬 10 Yorum</p>
-  <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=TikTok%20kesfet%20paketi">WhatsApp-dan sifariş et</a>
-</div>
-
-<!-- INSTAGRAM -->
-<div class="card"><h3>📸 Instagram Paketləri</h3></div>
-<div class="card">
-  <h3>👤 1.000 Instagram Takipçi</h3>
-  <p>✅ Real Qarantili</p>
-  <p><b>💰 5 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%201000%20real%20takipci">WhatsApp-dan sifariş et</a>
-</div>
-<div class="card">
-  <span class="badge">🔥 Yeni</span>
-  <h3>🇦🇿 Instagram Real Azərbaycan Bəyənmə</h3>
-  <p>👍 500 Bəyənmə</p>
-  <p>👁️ 500 İzlənmə</p>
-  <p>🚀 Keşfeti Açır</p>
-  <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20500%20real%20azerbaycan%20beyenme%20500%20izlenme">WhatsApp-dan sifariş et</a>
-</div>
-<div class="card">
-  <h3>👁️ 100.000 Reels İzlənmə ömürlük qalıcı</h3>
-  <p>♥️ 1.000 Bəyənmə</p>
-  <p><b>💰 3 AZN</b></p>
-  <a class="order-btn" href="https://wa.me/994516159103?text=Instagram%20100000%20izlenme">WhatsApp-dan sifariş et</a>
-</div>
-
+<!-- Whatsapp icon -->
 <div class="whatsapp">
   <a href="https://wa.me/994516159103">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
@@ -192,9 +131,9 @@ input, textarea, select{
 <div class="card" id="customerReviews">
   <h3>⭐ Müştəri Rəyləri</h3>
   <div id="reviewsSlider">
-    <p id="reviewText">Çox sürətli və keyfiyyətli xidmət 👍</p>
-    <b id="reviewName">— Elvin R.</b>
-    <p>⭐⭐⭐⭐⭐</p>
+    <p id="reviewText"></p>
+    <b id="reviewName"></b>
+    <p id="reviewStars"></p>
   </div>
 </div>
 
@@ -204,7 +143,7 @@ input, textarea, select{
   <input type="text" id="reviewerName" placeholder="Adınız" style="width:80%;">
   <textarea id="reviewTextInput" placeholder="Rəyinizi yazın" style="width:80%;"></textarea>
   <div>Ulduz:
-    <select id="reviewStars">
+    <select id="reviewStarsInput">
       <option value="">Seçin</option>
       <option value="⭐">⭐</option>
       <option value="⭐⭐">⭐⭐</option>
@@ -217,21 +156,6 @@ input, textarea, select{
 </div>
 
 <footer>© 2025-2026 BrendPanel.az</footer>
-
-<!-- 🔴 CANLI SİFARİŞ BİLDİRİŞİ -->
-<div id="liveOrder" style="
-position:fixed;
-bottom:20px;
-left:20px;
-background:#111;
-color:#fff;
-padding:12px 16px;
-border-radius:12px;
-box-shadow:0 0 20px rgba(0,0,0,.6);
-font-size:13px;
-display:none;
-z-index:9999;
-"></div>
 
 <script>
 // Dark / Light Mode
@@ -251,59 +175,48 @@ document.addEventListener("DOMContentLoaded",()=>{
   applyTheme(savedTheme);
 });
 
-// Müştəri Rəy Slidəri
+// Müştəri Rəy Slidəri (4-5 gözəl reylərlə)
 const reviews=[
-  {text:"Çox sürətli və güvənli paneldir 👍", name:"— Elvin R."},
-  {text:"Qiymətlər çox münasibdir 🔥", name:"— Nihad M."},
-  {text:"Reels izlenmeleri problemsiz gəldi 👌", name:"— Aysel Q."},
-  {text:"WhatsApp dəstək superdir 💯", name:"— Murad H."}
+  {text:"WhatsApp dəstək superdir 💯", name:"— Nazim M.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"N1 panel Bunlardı 🔥", name:"— Asim S.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Çooooox ucuzdur qiymetler 👍", name:"— Gunel R.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Çox sürətli və güvənli paneldir 👍", name:"— Elvin R.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Reels izlenmeleri problemsiz gəldi 👌", name:"— Aysel Q.", stars:"⭐⭐⭐⭐⭐"}
 ];
 let i=0;
-setInterval(()=>{
-  i=(i+1)%reviews.length;
+function showReview(){
   document.getElementById("reviewText").innerText=reviews[i].text;
   document.getElementById("reviewName").innerText=reviews[i].name;
-},4000);
-
-// Canlı sifariş
-const orders=["📦 TikTok — 10.000 İzlənmə alındı","📦 Instagram — 1.000 Real Takipçi alındı","📦 TikTok — 1.000 Bəyənmə alındı","📦 Instagram — Reels 100.000 İzlənmə","📦 TikTok — Keşfet Paketi alındı"];
-function showLiveOrder(){
-  const box=document.getElementById("liveOrder");
-  const randomOrder=orders[Math.floor(Math.random()*orders.length)];
-  const minutes=Math.floor(Math.random()*5)+1;
-  box.innerHTML=`<b>${minutes} dəqiqə əvvəl</b><br>${randomOrder}`;
-  box.style.display="block";
-  setTimeout(()=>{box.style.display="none";},5000);
+  document.getElementById("reviewStars").innerText=reviews[i].stars;
+  i=(i+1)%reviews.length;
 }
-setInterval(showLiveOrder,12000);
+showReview();
+setInterval(showReview,4000);
 
-// Rəy Formu (birbaşa Müştəri Rəyləri bölməsinə əlavə olunur)
+// Rəy Formu (localStorage ilə saxlayır)
 const submitBtn=document.getElementById("submitReview");
-const customerReviews=document.getElementById("customerReviews");
+const allReviewsDiv=document.getElementById("reviewsSlider");
 let reviewsList=JSON.parse(localStorage.getItem("reviewsList"))||[];
 reviewsList.forEach(r=>{
   const p=document.createElement("p");
   p.innerHTML=`<b>${r.name}</b> ${r.stars}<br>${r.text}`;
-  customerReviews.appendChild(p);
+  allReviewsDiv.appendChild(p);
 });
 submitBtn.addEventListener("click",()=>{
   const name=document.getElementById("reviewerName").value.trim();
   const text=document.getElementById("reviewTextInput").value.trim();
-  const stars=document.getElementById("reviewStars").value;
-  if(!name){alert("Adınızı yazmalısınız!");return;}
-  if(!text){alert("Rəy yazmalısınız!");return;}
-  if(!stars){alert("Ulduz seçməlisiniz!");return;}
+  const stars=document.getElementById("reviewStarsInput").value;
+  if(!name || !text || !stars){alert("Ad, rəy və ulduz seçməlisiniz!"); return;}
   const review={name,text,stars};
   reviewsList.push(review);
   localStorage.setItem("reviewsList",JSON.stringify(reviewsList));
   const p=document.createElement("p");
   p.innerHTML=`<b>${name}</b> ${stars}<br>${text}`;
-  customerReviews.appendChild(p);
+  allReviewsDiv.appendChild(p);
   document.getElementById("reviewerName").value="";
   document.getElementById("reviewTextInput").value="";
-  document.getElementById("reviewStars").value="";
+  document.getElementById("reviewStarsInput").value="";
 });
 </script>
-
 </body>
 </html>
