--- a/index.html
+++ b/index.html
@@ -253,11 +253,28 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 // Müştəri Rəy Slidəri
 const reviews=[
-  {text:"Çox sürətli və güvənli paneldir 👍", name:"— Elvin R."},
-  {text:"Qiymətlər çox münasibdir 🔥", name:"— Nihad M."},
-  {text:"Reels izlenmeleri problemsiz gəldi 👌", name:"— Aysel Q."},
-  {text:"WhatsApp dəstək superdir 💯", name:"— Murad H."}
+  {text:"Çox sürətli xidmət, razı qaldım 👍", name:"— Kamran H.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Qiymətlər doğrudan da ucuzdur 🔥", name:"— Nihad A.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"İlk sifarişim idi, super alındı", name:"— Tural R.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Instagram reels keşfete düşdü", name:"— Ləman S.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Panel tam güvənlidir 💯", name:"— Orxan K.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"WhatsApp dəstək çox mədənidir", name:"— Aysun M.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"TikTok izlənmələr stabil qaldı", name:"— Emil T.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Puluna dəyər, tövsiyə edirəm", name:"— Zaur İ.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"1 saat olmadan sifariş gəldi", name:"— Samir B.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Həmişə burdan sifariş edirəm", name:"— Rəşad V.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Çox sadə və rahat paneldir", name:"— Elçin Q.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Reels baxışları problemsiz gəldi", name:"— Günel M.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Qiymətə görə əla xidmətdir", name:"— Fərid K.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"İzlənmələr silinmədi 👍", name:"— Vüsal T.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Dostuma da məsləhət gördüm", name:"— İlqar S.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Dəstək həmişə cavab verir", name:"— Murad H.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Panel dizaynı da xoşdur", name:"— Aytac R.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"TikTok üçün ideal paneldir", name:"— Emin A.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Çox məmnun qaldım 💥", name:"— Kənan B.", stars:"⭐⭐⭐⭐⭐"},
+  {text:"Real və sürətli xidmət", name:"— Nərgiz L.", stars:"⭐⭐⭐⭐⭐"}
 ];
+  
 let i=0;
 setInterval(()=>{
   i=(i+1)%reviews.length;
