Add 'How It Works' section to index.html
Added a section explaining how the service works.

--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@ input, textarea, select{
 <button id="themeToggle" style="margin-top:10px;padding:8px 16px;border:none;border-radius:20px;cursor:pointer;font-weight:bold;">
 🌙 Dark Mode
 </button>
+<!-- Necə İşləyir? -->
+<div class="card" id="howItWorks">
+  <h3>⚡ Necə İşləyir?</h3>
+  <ol>
+    <li><b>1.</b> Paket seçin</li>
+    <li><b>2.</b> WhatsApp-dan sifariş göndərin</li>
+    <li><b>3.</b> Xidmət başlasın və izləyin</li>
+  </ol>
+</div>
 
 <div class="card">
   <h3>⭐ Statistikamız</h3>
